--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: minima
+theme: Architect
 title: Kang's homepage
 description: Hi there! This is my homepage, and I shall add more info about me here later...
