--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: Architect
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Kang's homepage
 description: Hi there! This is my homepage, and I shall add more info about me here later...
